--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "ai": "^4.3.16",
+    "canvas-confetti": "^1.9.3",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "openai": "^4.103.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
