Fix authentication issues - JavaScript bundle not loading
- Fixed root layout conditional imports causing build issues
- Created DevToolsInitializer client component for browser-only code
- Added manual auth test page for debugging without React
- Created SimpleAuthButton component for minimal auth testing
- Added auth debug page and session API endpoint
- Updated package.json to remove --no-lint flag
- This should fix the JavaScript bundle not executing on Vercel

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   ],
   "scripts": {
     "dev": "next dev",
-    "build": "next build --no-lint",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit --incremental false",
     "mcp:browser-devtools": "cd mcp-servers/browser-devtools && node index.js",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org your-org --project your-project ./build"
   },
