--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "type-check": "tsc --noEmit --incremental false",
+    "clean": "rm -rf .next out node_modules",
+    "preflight": "npm run type-check && npm run lint && npm run format:check",
     "mcp:browser-devtools": "cd mcp-servers/browser-devtools && node index.js",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org your-org --project your-project ./build"
   },
@@ -49,6 +54,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.4.35",
+    "prettier": "^3.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
